2023-03-25
- Es gibt jetzt einen "Integer-" und einen "Doubleeditor"

- Die Anzahl der Elemente im Supermenü die unten in der App angezeigt werden sollen kann konfiguriert werden

- Die Farbe der Elemente im Supermenü die unten in der App angezeigt werden sollen kann konfiguriert werden

- Die Höhe der Elemente im Supermenü die unten in der App angezeigt werden sollen kann konfiguriert werden

- Der Deignconfigurator kann jetzt auch in der App aufgerufen werden

- Das Supermenü verarbeitet jetzt selbst, ob man eingeloggt sein muss oder nicht

- Das Formular zum Anmelden/Registrieren mit Token ist jetzt auch eine BasePage

- Nach dem Login/Registrieren wird jetzt direkt die gewünschte Seite aufgerufen

- Beim Logout wird jetzt die Profilseite geschlossen

- Nach Login -> Logout wurde beim erneuten Login direkt die Passworteingabe angezeigt und das Passwort war noch eingetragen

- Bei jedem Klick auf "Termine"/"Appointments" wurden die Termine neu geladen und alle noch mal in die Liste eingetragen.
Ab jetzt werden nur noch neue Termine eingetragen

- Der Multibuttoon war, wenn er angeklickt wurde nicht über dem Menü, korrigiert

- Spaces werden jetzt wieder geladen, wenn die Spaces aufgerufen werden

- Das TemplatedataModel überprüft jetzt, ob neue Elemente angehängt werden dürfen oder nicht.
Das erzwingt bei allen Dataobjects ein Assign und dafür hätte ich gerne eine bessere Implementierung, als dass ich das jedesmal machen muss

- Rechtegruppen haben jetzt auch einen Accesscode, Idee ist, dass man sich selbst in so eine Gruppe eintragen kann, wenn man den Accesscode kennt

- Bei einer Rechtegruppe wird jetzt auch angezeigt, wenn man der Owner dieser Gruppe ist

- Server: Die Statusabfrage bzgl. Nachrichten (das andere die Nachricht empfangen/gelesen haben) wird jetzt in einer Query abgefragt, statt in 2

- Server: Bei Abfrage der Nachrichten werden jetzt auch Space-Anfragen mit abgerufen (werden in der App aber noch nicht angezeigt)
